# INF1019-trabs

./: README.md
trab1/: CMakeLists.txt
trab1/src/: main.c  messenger.c  messenger.h  testasync.c  testasync.h  testsync.c  testsync.h
trab2/: CMakeLists.txt
trab2/src/: debug.h  log.c  log.h  main.c  pagetable.c  pagetable.h
